--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "typescript",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server.js",
+  "main": "src/server.ts",
   "scripts": {
     "build": "rm -rf build/ && tsc"
   },
