--- a/website/package.json
+++ b/website/package.json
@@ -14,11 +14,13 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "mongodb": "^4.6.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.13"
+    "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97"
   }
 }
