--- a/Ts/package.json
+++ b/Ts/package.json
@@ -11,13 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/socket.io": "^3.0.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "lodash": "^4.17.21",
-    "mongodb": "^4.6.0"
+    "mongodb": "^4.6.0",
+    "socket.io": "^4.5.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
