--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.18.1",
     "lodash": "^4.17.21",
     "mongodb": "^4.6.0",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
