--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "mongodb": "^4.6.0"
+    "mongodb": "^4.6.0",
+    "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
