--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mongodb": "^4.6.0",
+    "node-express-mongo-passport-jwt-typescript": "github:jerrychong25/node-express-mongo-passport-jwt-typescript",
     "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
