--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/FreezB11/Typescript/issues"
   },
-  "homepage": "https://github.com/FreezB11/Typescript#readme"
+  "homepage": "https://github.com/FreezB11/Typescript#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "mongoose": "^6.4.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
+  }
 }
