--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.4.0",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2"
   }
 }
