--- a/reference/package.json
+++ b/reference/package.json
@@ -11,6 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/express-flash": "^0.0.2",
+    "@types/express-session": "^1.17.4",
+    "@types/passport": "^1.0.9",
+    "@types/passport-local": "^1.0.34",
+    "@types/passport-local-mongoose": "^6.1.1",
     "@types/socket.io-client": "^3.0.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
@@ -19,8 +24,12 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.3",
     "mongodb": "^4.6.0",
-    "node-express-mongo-passport-jwt-typescript": "github:jerrychong25/node-express-mongo-passport-jwt-typescript",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2",
     "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
