--- a/reference/package.json
+++ b/reference/package.json
@@ -10,13 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/express-flash": "^0.0.2",
-    "@types/express-session": "^1.17.4",
-    "@types/passport": "^1.0.9",
-    "@types/passport-local": "^1.0.34",
-    "@types/passport-local-mongoose": "^6.1.1",
-    "@types/socket.io-client": "^3.0.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
@@ -26,6 +19,7 @@
     "express": "^4.18.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
+    "method-override": "^3.0.0",
     "mongodb": "^4.6.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
@@ -33,10 +27,18 @@
     "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
+    "@types/method-override": "^0.0.32",
+    "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/express-flash": "^0.0.2",
+    "@types/express-session": "^1.17.4",
     "@types/mongoose": "^5.11.97",
-    "@types/socket.io": "^3.0.2"
+    "@types/passport": "^1.0.9",
+    "@types/passport-local": "^1.0.34",
+    "@types/passport-local-mongoose": "^6.1.1",
+    "@types/socket.io": "^3.0.2",
+    "@types/socket.io-client": "^3.0.0"
   }
 }
