--- a/package.json
+++ b/package.json
@@ -17,6 +17,16 @@
   },
   "homepage": "https://github.com/FreezB11/Typescript#readme",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.13",
+    "@types/express-flash": "^0.0.2",
+    "@types/express-session": "^1.17.4",
+    "@types/method-override": "^0.0.32",
+    "@types/mongoose": "^5.11.97",
+    "@types/passport": "^1.0.9",
+    "@types/passport-local": "^1.0.34",
+    "@types/passport-local-mongoose": "^6.1.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
