--- a/package.json
+++ b/package.json
@@ -19,12 +19,10 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
-    "@types/express": "^4.17.13",
     "@types/express-flash": "^0.0.2",
     "@types/express-session": "^1.17.4",
     "@types/method-override": "^0.0.32",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^18.0.3",
     "@types/passport": "^1.0.9",
     "@types/passport-local": "^1.0.34",
     "@types/passport-local-mongoose": "^6.1.1",
@@ -40,5 +38,10 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.3",
+    "typescript": "^4.7.4"
   }
 }
