--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   ],
   "dependencies": {
     "@types/cors": "^2.8.12",
+    "@types/ejs": "^3.1.1",
     "command-line-args": "^5.2.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
